@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.7 2004-11-14 21:03:49 castaglia Exp $ -->
+<!-- $Id: index.html,v 1.8 2004-11-14 23:45:52 castaglia Exp $ -->
 <!-- $Source: /home/proftpd-core/backup/proftp-cvsroot/proftpd/doc/howto/index.html,v $ -->
 
 <html>
@@ -67,6 +67,11 @@ Recommended order of reading:
       environment</dt>
   <dd>Covers how NAT and passive FTP data transfers work, how to configure
       <code>proftpd</code> to operate in such environments
+  </dd>
+
+  <p>
+  <dt>On <a href="ASCII.html">ASCII transfers</a>
+  <dd>Covers ASCII mode for data transfers, and the affected FTP commands
   </dd>
 
   <p>
@@ -173,7 +178,7 @@ all of the directives to see everything that ProFTPD is capable of supporting.
 
 <p>
 <hr>
-Last Updated: <i>$Date: 2004-11-14 21:03:49 $</i><br>
+Last Updated: <i>$Date: 2004-11-14 23:45:52 $</i><br>
 <hr>
 
 </body>
