@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.625 2004-11-10 18:32:24 castaglia Exp $
+$Id: NEWS,v 1.626 2004-11-14 23:45:51 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -69,6 +69,9 @@ CVS
   e.g 'ExtendedLog /path/to/rfc2228.log SEC'.
 - Bug 2507 - Enable use of sendfile by default.  Use the new UseSendfile
   directive to disable, e.g. 'UseSendfile off'.
+- Bug 2471 - Restart command (REST) is not working correctly for text files.
+  When in ASCII mode, ProFTPD now refuses to handle REST.  This behavior
+  is documented in doc/howto/ASCII.html.
 
 1.2.10 - Released 04-Sep-2004
 --------------------------------
